<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_check"
        android:title="@string/title_tasks" />
    <item
        android:id="@+id/navigation_study"
        android:icon="@drawable/ic_study"
        android:title="@string/title_study" />
    <item
        android:id="@+id/navigation_expense"
        android:icon="@drawable/ic_wallet"
        android:title="@string/title_expense" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/title_stats" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>
