<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tasks">

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.dailycheck.ui.tasks.TasksFragment"
        android:label="@string/title_tasks" />

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.example.dailycheck.ui.study.StudyFragment"
        android:label="@string/title_study" />

    <fragment
        android:id="@+id/navigation_expense"
        android:name="com.example.dailycheck.ui.expense.ExpenseFragment"
        android:label="@string/title_expense" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.dailycheck.ui.stats.StatsFragment"
        android:label="@string/title_stats" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.dailycheck.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dailycheck.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>
